Fixed alignment, added some bells and whistles and a login box

--- a/Examinator/Examinator/css/default.css
+++ b/Examinator/Examinator/css/default.css
@@ -1,6 +1,7 @@
 ﻿html, body {
 	font-family: Tahoma, Arial; 
-	margin-left:20px; 	
+	margin-left:8%; 
+    margin-top: 2%;	
 	background: #333333;
 	font-size: 16px;
 }
@@ -31,25 +32,38 @@ a:active, a:focus {
 /*Header*/
 .header {
 	height: 95px;
-    width: 900px;
+    width: 915px;
     padding:0px;
     background: rgba(0,0,0,.50);
+    border-radius:5px 7px;
 }
 
 .header h1{
-    margin-left:7px;
-    line-height:40px;
+    margin:15px 0px 0px 55px;
+    line-height:60px;
 }
 
 .header h3{
-    margin-left:75px;
-    line-height:0px;
+    margin: 5px 0px 0px 95px;
+    line-height: 0px;
+    text-shadow: 5px 5px 5px #0099CC;
+}
+
+.titlebox{
+    width:500px;
+    float: left;
+}
+
+.loginbox{
+    margin-right: 7px;
+    float: right;
+    text-align: right;
 }
 
 /*Home Page Table*/
 
 .menucontainer{    
-    width:85%;
+    width:100%;
     margin: 0px 0px 0px 5px;
     background: rgba(0,0,0,.75);
 }
